--- a/m7_radio/SW4STM32/mchf-radio/.project
+++ b/m7_radio/SW4STM32/mchf-radio/.project
@@ -29,27 +29,27 @@
 		<link>
 			<name>hw/FreeRTOSConfig.h</name>
 			<type>1</type>
-			<locationURI>copy_PARENT12/hw/FreeRTOSConfig.h</locationURI>
+			<locationURI>PARENT-2-PROJECT_LOC/hw/FreeRTOSConfig.h</locationURI>
 		</link>
 		<link>
 			<name>hw/bsp.c</name>
 			<type>1</type>
-			<locationURI>copy_PARENT12/hw/bsp.c</locationURI>
+			<locationURI>PARENT-2-PROJECT_LOC/hw/bsp.c</locationURI>
 		</link>
 		<link>
 			<name>hw/bsp.h</name>
 			<type>1</type>
-			<locationURI>copy_PARENT12/hw/bsp.h</locationURI>
+			<locationURI>PARENT-2-PROJECT_LOC/hw/bsp.h</locationURI>
 		</link>
 		<link>
 			<name>hw/calibration.c</name>
 			<type>1</type>
-			<locationURI>copy_PARENT12/hw/calibration.c</locationURI>
+			<locationURI>PARENT-2-PROJECT_LOC/hw/calibration.c</locationURI>
 		</link>
 		<link>
 			<name>hw/calibration.h</name>
 			<type>1</type>
-			<locationURI>copy_PARENT12/hw/calibration.h</locationURI>
+			<locationURI>PARENT-2-PROJECT_LOC/hw/calibration.h</locationURI>
 		</link>
 		<link>
 			<name>hw/cpu_utils.c</name>
@@ -64,17 +64,17 @@
 		<link>
 			<name>hw/ffconf.h</name>
 			<type>1</type>
-			<locationURI>copy_PARENT12/hw/ffconf.h</locationURI>
+			<locationURI>PARENT-2-PROJECT_LOC/hw/ffconf.h</locationURI>
 		</link>
 		<link>
 			<name>hw/ft6x06_conf.h</name>
 			<type>1</type>
-			<locationURI>copy_PARENT12/hw/ft6x06_conf.h</locationURI>
+			<locationURI>PARENT-2-PROJECT_LOC/hw/ft6x06_conf.h</locationURI>
 		</link>
 		<link>
 			<name>hw/is42s32800j_conf.h</name>
 			<type>1</type>
-			<locationURI>copy_PARENT12/hw/is42s32800j_conf.h</locationURI>
+			<locationURI>PARENT-2-PROJECT_LOC/hw/is42s32800j_conf.h</locationURI>
 		</link>
 		<link>
 			<name>hw/k_rtc.c</name>
@@ -89,7 +89,7 @@
 		<link>
 			<name>hw/main.h</name>
 			<type>1</type>
-			<locationURI>copy_PARENT12/hw/main.h</locationURI>
+			<locationURI>PARENT-2-PROJECT_LOC/hw/main.h</locationURI>
 		</link>
 		<link>
 			<name>hw/mchf_pro_board.c</name>
@@ -104,12 +104,12 @@
 		<link>
 			<name>hw/mchf_types.h</name>
 			<type>1</type>
-			<locationURI>copy_PARENT123/hw/mchf_types.h</locationURI>
+			<locationURI>PARENT-2-PROJECT_LOC/hw/mchf_types.h</locationURI>
 		</link>
 		<link>
 			<name>hw/mt25tl01g_conf.h</name>
 			<type>1</type>
-			<locationURI>copy_PARENT12/hw/mt25tl01g_conf.h</locationURI>
+			<locationURI>PARENT-2-PROJECT_LOC/hw/mt25tl01g_conf.h</locationURI>
 		</link>
 		<link>
 			<name>hw/printf.c</name>
@@ -119,82 +119,77 @@
 		<link>
 			<name>hw/sd_diskio.h</name>
 			<type>1</type>
-			<locationURI>copy_PARENT12/hw/sd_diskio.h</locationURI>
+			<locationURI>PARENT-2-PROJECT_LOC/hw/sd_diskio.h</locationURI>
 		</link>
 		<link>
 			<name>hw/sd_diskio_dma.c</name>
 			<type>1</type>
-			<locationURI>copy_PARENT12/hw/sd_diskio_dma.c</locationURI>
+			<locationURI>PARENT-2-PROJECT_LOC/hw/sd_diskio_dma.c</locationURI>
 		</link>
 		<link>
 			<name>hw/stm32h747i_discovery_conf.h</name>
 			<type>1</type>
-			<locationURI>copy_PARENT12/hw/stm32h747i_discovery_conf.h</locationURI>
+			<locationURI>PARENT-2-PROJECT_LOC/hw/stm32h747i_discovery_conf.h</locationURI>
 		</link>
 		<link>
 			<name>hw/stm32h7xx_hal_conf.h</name>
 			<type>1</type>
-			<locationURI>copy_PARENT12/hw/stm32h7xx_hal_conf.h</locationURI>
+			<locationURI>PARENT-2-PROJECT_LOC/hw/stm32h7xx_hal_conf.h</locationURI>
 		</link>
 		<link>
 			<name>hw/stm32h7xx_hal_msp.c</name>
 			<type>1</type>
-			<locationURI>copy_PARENT12/hw/stm32h7xx_hal_msp.c</locationURI>
+			<locationURI>PARENT-2-PROJECT_LOC/hw/stm32h7xx_hal_msp.c</locationURI>
 		</link>
 		<link>
 			<name>hw/stm32h7xx_hal_timebase_tim.c</name>
 			<type>1</type>
-			<locationURI>copy_PARENT12/hw/stm32h7xx_hal_timebase_tim.c</locationURI>
+			<locationURI>PARENT-2-PROJECT_LOC/hw/stm32h7xx_hal_timebase_tim.c</locationURI>
 		</link>
 		<link>
 			<name>hw/stm32h7xx_it.c</name>
 			<type>1</type>
-			<locationURI>copy_PARENT12/hw/stm32h7xx_it.c</locationURI>
+			<locationURI>PARENT-2-PROJECT_LOC/hw/stm32h7xx_it.c</locationURI>
 		</link>
 		<link>
 			<name>hw/stm32h7xx_it.h</name>
 			<type>1</type>
-			<locationURI>copy_PARENT12/hw/stm32h7xx_it.h</locationURI>
+			<locationURI>PARENT-2-PROJECT_LOC/hw/stm32h7xx_it.h</locationURI>
 		</link>
 		<link>
 			<name>hw/storage.c</name>
 			<type>1</type>
-			<locationURI>copy_PARENT12/hw/storage.c</locationURI>
+			<locationURI>PARENT-2-PROJECT_LOC/hw/storage.c</locationURI>
 		</link>
 		<link>
 			<name>hw/storage.h</name>
 			<type>1</type>
-			<locationURI>copy_PARENT12/hw/storage.h</locationURI>
+			<locationURI>PARENT-2-PROJECT_LOC/hw/storage.h</locationURI>
 		</link>
 		<link>
 			<name>hw/usbh_conf.c</name>
 			<type>1</type>
-			<locationURI>copy_PARENT12/hw/usbh_conf.c</locationURI>
+			<locationURI>PARENT-2-PROJECT_LOC/hw/usbh_conf.c</locationURI>
 		</link>
 		<link>
 			<name>hw/usbh_conf.h</name>
 			<type>1</type>
-			<locationURI>copy_PARENT12/hw/usbh_conf.h</locationURI>
+			<locationURI>PARENT-2-PROJECT_LOC/hw/usbh_conf.h</locationURI>
 		</link>
 		<link>
-			<name>hw/usbh_diskio.h</name>
+			<name>hw/usbh_diskio.c</name>
 			<type>1</type>
-			<locationURI>copy_PARENT12/hw/usbh_diskio.h</locationURI>
-		</link>
-		<link>
-			<name>hw/usbh_diskio_dma.c</name>
-			<type>1</type>
-			<locationURI>copy_PARENT12/hw/usbh_diskio_dma.c</locationURI>
+			<locationURI>PARENT-2-PROJECT_LOC/hw/usbh_diskio.c</locationURI>
 		</link>
 		<link>
 			<name>startup/startup_stm32h747xx_CM7.s</name>
 			<type>1</type>
-			<locationURI>copy_PARENT1234/startup_stm32h747xx_CM7.s</locationURI>
+			<locationURI>PARENT-1-PROJECT_LOC/startup_stm32h747xx_CM7.s</locationURI>
 		</link>
 		<link>
 			<name>startup/syscalls.c</name>
 			<type>1</type>
-			<locationURI>copy_PARENT1234/syscalls.c</locationURI>
+			<locationURI>PARENT-1-PROJECT_LOC/syscalls.c</locationURI>
 		</link>
 		<link>
 			<name>startup/system_stm32h7xx_dualcore_bootcm7_cm4gated.c</name>
