--- a/m4_dsp/project/mchf-dsp/.cproject
+++ b/m4_dsp/project/mchf-dsp/.cproject
@@ -33,6 +33,7 @@
 								<option defaultValue="gnu.c.optimization.level.none" id="fr.ac6.managedbuild.gnu.c.compiler.option.optimization.level.1118499528" name="Optimization Level" superClass="fr.ac6.managedbuild.gnu.c.compiler.option.optimization.level" useByScannerDiscovery="false" value="fr.ac6.managedbuild.gnu.c.optimization.level.none" valueType="enumerated"/>
 								<option id="gnu.c.compiler.option.debugging.level.18039117" name="Debug Level" superClass="gnu.c.compiler.option.debugging.level" useByScannerDiscovery="false" value="gnu.c.debugging.level.none" valueType="enumerated"/>
 								<option id="gnu.c.compiler.option.include.paths.1393707906" name="Include paths (-I)" superClass="gnu.c.compiler.option.include.paths" useByScannerDiscovery="false" valueType="includePath">
+									<listOptionValue builtIn="false" value="../../../../common"/>
 									<listOptionValue builtIn="false" value="../../../startup"/>
 									<listOptionValue builtIn="false" value="../../../cmsis"/>
 									<listOptionValue builtIn="false" value="../../../cmsis_boot"/>
