--- a/m7_radio/SW4STM32/mchf-radio/.cproject
+++ b/m7_radio/SW4STM32/mchf-radio/.cproject
@@ -52,6 +52,8 @@
 									<listOptionValue builtIn="false" value="../../../proc/rotary"/>
 									<listOptionValue builtIn="false" value="../../../proc/icc"/>
 									<listOptionValue builtIn="false" value="../../../proc/audio"/>
+									<listOptionValue builtIn="false" value="../../../proc/touch"/>
+									<listOptionValue builtIn="false" value="../../../proc/touch/hw"/>
 									<listOptionValue builtIn="false" value="../../../../"/>
 									<listOptionValue builtIn="false" value="../../../../STM32CubeH7/Drivers/CMSIS/Device/ST/STM32H7xx/Include"/>
 									<listOptionValue builtIn="false" value="../../../../STM32CubeH7/Drivers/STM32H7xx_HAL_Driver/Inc"/>
