--- a/m7_radio/SW4STM32/mchf-radio/.project
+++ b/m7_radio/SW4STM32/mchf-radio/.project
@@ -442,16 +442,6 @@
 			<locationURI>PARENT-2-PROJECT_LOC/proc/audio/audio_proc.h</locationURI>
 		</link>
 		<link>
-			<name>proc/esp32/esp32_proc.c</name>
-			<type>1</type>
-			<locationURI>PARENT-2-PROJECT_LOC/proc/esp32/esp32_proc.c</locationURI>
-		</link>
-		<link>
-			<name>proc/esp32/esp32_proc.h</name>
-			<type>1</type>
-			<locationURI>PARENT-2-PROJECT_LOC/proc/esp32/esp32_proc.h</locationURI>
-		</link>
-		<link>
 			<name>proc/icc/icc_proc.c</name>
 			<type>1</type>
 			<locationURI>PARENT-2-PROJECT_LOC/proc/icc/icc_proc.c</locationURI>
@@ -462,14 +452,24 @@
 			<locationURI>PARENT-2-PROJECT_LOC/proc/icc/icc_proc.h</locationURI>
 		</link>
 		<link>
-			<name>proc/rotary/rotary_driver.c</name>
+			<name>proc/ipc/ipc_proc.c</name>
 			<type>1</type>
-			<locationURI>PARENT-2-PROJECT_LOC/proc/rotary/rotary_driver.c</locationURI>
+			<locationURI>PARENT-2-PROJECT_LOC/proc/ipc/ipc_proc.c</locationURI>
 		</link>
 		<link>
-			<name>proc/rotary/rotary_driver.h</name>
+			<name>proc/ipc/ipc_proc.h</name>
 			<type>1</type>
-			<locationURI>PARENT-2-PROJECT_LOC/proc/rotary/rotary_driver.h</locationURI>
+			<locationURI>PARENT-2-PROJECT_LOC/proc/ipc/ipc_proc.h</locationURI>
+		</link>
+		<link>
+			<name>proc/rotary/rotary_proc.c</name>
+			<type>1</type>
+			<locationURI>PARENT-2-PROJECT_LOC/proc/rotary/rotary_proc.c</locationURI>
+		</link>
+		<link>
+			<name>proc/rotary/rotary_proc.h</name>
+			<type>1</type>
+			<locationURI>PARENT-2-PROJECT_LOC/proc/rotary/rotary_proc.h</locationURI>
 		</link>
 		<link>
 			<name>proc/touch/touch_proc.c</name>
