WiFi RSSI status control

--- a/m7_radio/SW4STM32/mchf-radio/.project
+++ b/m7_radio/SW4STM32/mchf-radio/.project
@@ -1012,6 +1012,16 @@
 			<locationURI>PARENT-2-PROJECT_LOC/proc/ui/desktop/volume/ui_controls_volume.h</locationURI>
 		</link>
 		<link>
+			<name>proc/ui/desktop/wifi_stat/ui_controls_wifi.c</name>
+			<type>1</type>
+			<locationURI>PARENT-2-PROJECT_LOC/proc/ui/desktop/wifi_stat/ui_controls_wifi.c</locationURI>
+		</link>
+		<link>
+			<name>proc/ui/desktop/wifi_stat/ui_controls_wifi.h</name>
+			<type>1</type>
+			<locationURI>PARENT-2-PROJECT_LOC/proc/ui/desktop/wifi_stat/ui_controls_wifi.h</locationURI>
+		</link>
+		<link>
 			<name>proc/ui/menu/items/clock/clock.c</name>
 			<type>1</type>
 			<locationURI>PARENT-2-PROJECT_LOC/proc/ui/menu/items/clock/clock.c</locationURI>
