--- a/m7_launcher/SW4STM32/mchf-launcher/.cproject
+++ b/m7_launcher/SW4STM32/mchf-launcher/.cproject
@@ -59,11 +59,11 @@
 									<listOptionValue builtIn="false" value="../../../../controls/keypad"/>
 								</option>
 								<option id="gnu.c.compiler.option.preprocessor.def.symbols.1720876904" name="Defined symbols (-D)" superClass="gnu.c.compiler.option.preprocessor.def.symbols" useByScannerDiscovery="false" valueType="definedSymbols">
+									<listOptionValue builtIn="false" value="USE_PWR_LDO_SUPPLY"/>
 									<listOptionValue builtIn="false" value="USE_HAL_DRIVER"/>
 									<listOptionValue builtIn="false" value="STM32H747xx"/>
 									<listOptionValue builtIn="false" value="USE_STM32H747I_DISCO"/>
 									<listOptionValue builtIn="false" value="BSP_USE_CMSIS_OS"/>
-									<listOptionValue builtIn="false" value="USE_PWR_LDO_SUPPLY__N"/>
 									<listOptionValue builtIn="false" value="USE_TS_INT"/>
 									<listOptionValue builtIn="false" value="USE_SDCARD"/>
 									<listOptionValue builtIn="false" value="CORE_CM7"/>
